[package]
name = "geekgram"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.4"
crossterm = { version ="0.28.0", features=["event-stream"]}
eyre = "0.6.12"
futures = "0.3.31"
grammers-client = "0.7.0"
grammers-tl-types = "0.7.0"
log = "0.4.27"
ratatui = "0.29.0"
rusqlite = "0.35.0"
simple-logging = "2.0.2"
tokio = {version = "1.45.0", features = ["rt", "macros"]}
